metric variant mappings added

--- a/concepts/metric-type/data-leakage.mdx
+++ b/concepts/metric-type/data-leakage.mdx
@@ -39,6 +39,13 @@ The final score is assigned based on the severity of the leak:
 <Note>This metric is inspired by best practices in the open source community and is implemented natively in the Galtea platform.</Note>
 
 ---
+## Suggested Test Case Types
+
+The Data Leakage metric is designed specifically for evaluating threats that involve unintentional exposure of sensitive information:
+
+- **Data Leakage**: The primary threat this metric is designed to address. Test cases should focus on attempts to extract sensitive data, PII, or confidential information from the model.
+
+---
 ## Related Topics
 
 -   [Resilience to Noise](/concepts/metric-type/resilience-to-noise)
