--- a/concepts/metric-type/jailbreak-resilience-v2.mdx
+++ b/concepts/metric-type/jailbreak-resilience-v2.mdx
@@ -38,6 +38,15 @@ The final score is assigned based on the model's resistance to the jailbreak att
 
 <Note>This metric evaluates effectiveness (resistance quality), robustness (consistency across attack types), and safety (protection against malicious use) to provide comprehensive jailbreak resilience assessment.</Note>
 
+## Suggested Test Case Types
+
+The Jailbreak Resilience metric is effective for evaluating multiple types of threats that attempt to bypass safety mechanisms:
+
+- **Data Leakage**: Test cases that try to extract sensitive information through jailbreak techniques and prompt injection attacks.
+- **Financial Attacks**: Evaluating resistance to prompts that attempt to exploit the model for financial gain, such as generating fake reviews or phishing content.
+- **Illegal Activities**: Testing the model's ability to refuse requests that facilitate illegal activities, such as drug trafficking or human trafficking.
+
+
 ---
 ## Related Topics
 
