--- a/concepts/metric-type/unbiased.mdx
+++ b/concepts/metric-type/unbiased.mdx
@@ -39,6 +39,14 @@ Scores near **1** suggest that the system generates inclusive, fair, and sociall
 
 ---
 
+## Suggested Test Case Types
+
+The Unbiased metric is effective for evaluating threats that involve generating biased or discriminatory content:
+
+- **Toxicity**: Test cases that attempt to elicit biased or discriminatory responses, ensuring the model maintains fairness and inclusivity across different social groups.
+
+---
+
 ## Related Topics
 
 - [Non-Toxic](/concepts/metric-type/non-toxic)
