--- a/concepts/metric-type/answer-relevancy.mdx
+++ b/concepts/metric-type/answer-relevancy.mdx
@@ -38,6 +38,11 @@ Higher scores indicate that the generator is effectively aligned with user queri
 
 <Note>This metric was incorporated to the Galtea platform from the open source library [deepeval](https://deepeval.com/), for more information you can also visit their [documentation](https://deepeval.com/docs/metrics-answer-relevancy).</Note>
 
+---
+
+## Suggested Test Case Types
+
+The Answer Relevancy metric is effective for evaluating [all types of quality test cases](/concepts/product/test/quality-evolutions#available-evolution-types) in Galtea, since it evaluates the model's ability to maintain relevance to user queries.
 
 ---
 
