--- a/concepts/metric-type/contextual-precision.mdx
+++ b/concepts/metric-type/contextual-precision.mdx
@@ -37,6 +37,9 @@ Where **k** is a configurable cutoff (e.g., top 5 or top 10). This helps gauge w
 
 <Note>This metric was incorporated to the Galtea platform from the open source library [deepeval](https://deepeval.com/), for more information you can also visit their [documentation](https://deepeval.com/docs/metrics-contextual-precision).</Note>
 
+## Suggested Test Case Types
+
+The Contextual Precision metric is effective for evaluating [all types of quality test cases](/concepts/product/test/quality-evolutions#available-evolution-types) in Galtea for products that use RAG, since it measures the whether the model was able to gather useful information in retrieval for accurate and efficient response generation.
 
 ---
 
