--- a/concepts/metric-type/contextual-recall.mdx
+++ b/concepts/metric-type/contextual-recall.mdx
@@ -36,6 +36,10 @@ Higher scores reflect better recall—i.e., the retriever captured all necessary
 
 <Note>This metric was incorporated to the Galtea platform from the open source library [deepeval](https://deepeval.com/), for more information you can also visit their [documentation](https://deepeval.com/docs/metrics-contextual-recall).</Note>
 
+## Suggested Test Case Types
+
+The Contextual Recall metric is effective for evaluating [all types of quality test cases](/concepts/product/test/quality-evolutions#available-evolution-types) in Galtea for products that use RAG, since it measures whether the information retrieved sufficiently covers the knowledge needed to produce the correct output.
+
 
 ---
 
