--- a/concepts/metric-type/contextual-relevancy.mdx
+++ b/concepts/metric-type/contextual-relevancy.mdx
@@ -36,6 +36,10 @@ A higher score indicates that the retriever is effectively sourcing information 
 
 <Note>This metric was incorporated to the Galtea platform from the open source library [deepeval](https://deepeval.com/), for more information you can also visit their [documentation](https://deepeval.com/docs/metrics-contextual-relevancy).</Note>
 
+## Suggested Test Case Types
+
+The Contextual Relevancy metric is effective for evaluating [all types of quality test cases](/concepts/product/test/quality-evolutions#available-evolution-types) in Galtea for products that use RAG, since it measures whether the retrieved context is pertinent to the user's query.
+
 
 ---
 
