--- a/concepts/metric-type/factual-accuracy.mdx
+++ b/concepts/metric-type/factual-accuracy.mdx
@@ -42,6 +42,12 @@ The scoring system provides granular feedback on response quality, allowing you 
 
 ---
 
+## Suggested Test Case Types
+
+The Factual Accuracy metric effective for evaluating [all types of quality test cases](/concepts/product/test/quality-evolutions#available-evolution-types) in Galtea, since it asseses the model's ability to maintain factual correctness:
+
+---
+
 ## Related Topics
 
 - [Answer Relevancy](/concepts/metric-type/answer-relevancy)
