--- a/concepts/metric-type/faithfulness.mdx
+++ b/concepts/metric-type/faithfulness.mdx
@@ -36,6 +36,11 @@ This helps teams monitor the risk of hallucinations and improve trust in generat
 
 <Note>This metric was incorporated to the Galtea platform from the open source library [deepeval](https://deepeval.com/), for more information you can also visit their [documentation](https://deepeval.com/docs/metrics-faithfulness).</Note>
 
+---
+
+## Suggested Test Case Types
+
+The Faithfulness metric is effective for evaluating [all types of quality test cases](/concepts/product/test/quality-evolutions#available-evolution-types) in Galtea, for products that use RAG, since it measures the model's ability to maintain alignment with retrieved context:
 
 ---
 
