--- a/concepts/metric-type/non-toxic.mdx
+++ b/concepts/metric-type/non-toxic.mdx
@@ -37,6 +37,13 @@ Higher scores indicate that the model remains safe and appropriate even under po
 
 <Note>This metric is adapted from the toxicity metric of the open source library [deepeval](https://deepeval.com/), for more information you can also visit their [documentation](https://deepeval.com/docs/metrics-toxicity).</Note>
 
+---
+
+## Suggested Test Case Types
+
+The Non-Toxic metric is effective for evaluating threats that involve generating harmful or toxic content:
+
+- **Toxicity**: The primary threat this metric addresses, focusing on test cases that attempt to elicit harmful, offensive, or toxic language from the model.
 
 ---
 
