--- a/concepts/metric-type/resilience-to-noise.mdx
+++ b/concepts/metric-type/resilience-to-noise.mdx
@@ -38,6 +38,23 @@ Scores range from **0** (completely disrupted by noise) to **1** (fully robust t
 
 <Note>This metric is inspired by best practices in the open source community and is implemented natively in the Galtea platform.</Note>
 
+---
+
+## Suggested Test Case Types
+
+The Resilience To Noise metric is particularly effective for evaluating quality test evolutions that introduce various forms of noise and challenges to input clarity:
+
+- **Ambiguous**: Test cases with lack of clarity or specificity in the query.
+- **Incorrect**: Test cases with factual inaccuracies or misunderstandings in the query.
+- **Incomplete**: Test cases with missing key details in the query.
+- **Typos**: Test cases with misspelled words or accidental letter swaps in the query.
+- **Slang**: Test cases using colloquial or informal expressions.
+- **Abbreviations**: Test cases with shortened forms of words or acronyms.
+- **Unconventional Phrasing**: Test cases with rearranged words or uncommon sentence structures.
+- **Informal**: Test cases incorporating vernacular, text speak, and abbreviations using informal, everyday language.
+- **Linguistic Diverse**: Test cases mixing languages or dialects within the same query.
+- **Typographic Error**: Test cases with grammatical errors, misspellings, or unconventional sentence structures.
+- **Cognitively Diverse**: Test cases presenting thoughts in a non-linear fashion with rapid shifts in topics or ideas.
 
 ---
 
