--- a/sdk/tutorials/create-evaluation-with-custom-scores.mdx
+++ b/sdk/tutorials/create-evaluation-with-custom-scores.mdx
@@ -17,6 +17,7 @@ For individual test cases or production logs, you can define your metric and pas
 
 ```python
 import os
+from galtea import CustomScoreEvaluationMetric
 
 galtea = Galtea(api_key=os.getenv("GALTEA_API_KEY"))
 
