--- a/sdk/tutorials/create-product-description.mdx
+++ b/sdk/tutorials/create-product-description.mdx
@@ -65,79 +65,66 @@ Describe your product from the end-user perspective rather than technical implem
 - **Too Technical**: "A transformer model fine-tuned on domain data" → **Better**: "A legal research assistant that finds relevant case law and statutes"
 - **Feature Lists**: Avoid listing capabilities like "can answer questions, summarize text, and translate" → **Better**: Focus on the primary use case and user outcome
 
-## Enhanced Product Descriptions
-For maximum generation effectiveness, especially for security testing, you need to provide these additional details:
+## Product Context: Extended Product Descriptions
+For maximum generation effectiveness, especially for security testing, you need to provide additional details for **capabilities, inabilities and security boundaries**. As a rule of thumb it is better to be explicit and structured in these extended definitions, listing each enhanced definition with bullet point lists.
+
+In the following section we provide the definitions for each and enumerate specific examples based on the following product description:
+
+**Example Product Description:**
+>"A personal finance assistant that provides investment recommendations, portfolio analysis, and financial planning guidance for individual investors based on their goals, risk tolerance, and market conditions."
+
+Here are the extra product context categories: 
 
 ### Capabilities
 List what your product is specifically designed to do, and what kind of information has access to. This helps generate specifically targeted test cases.
+
 <Info>
-  <strong>Example:</strong> "Can answer questions about phone specifications, recommend devices based on user preferences, can access past user purchases, compare prices across models, and provide information about warranties and accessories."
+  Each capability should start with **can** or simply with a **verb** that explains what the product is capable of doing.
 </Info>
+```
+* Analyze investment portfolios and suggest rebalancing strategies
+* Provide market insights and explain financial concepts
+* Calculate retirement planning scenarios and savings goals
+* Compare investment products (stocks, bonds, ETFs, mutual funds)
+* Generate personalized investment strategies based on user profiles
+* Offer tax-efficient investment guidance and strategies
+
 
 ### Inabilities
 List technical limitations such as information and tools that the product do not have access to, and additionally the general scope boundaries. This prevents generation of irrelevant or misleading test cases.
 <Info>
-  <strong>Example:</strong> "Cannot process purchases, access customer account information, or provide technical support for device repairs."
+  Inability elements start with **cannot** or equivalent to signify what the system is not able to do. The inabilities could be functional or access related.
 </Info>
+```
+* Cannot execute trades or access brokerage accounts
+* Cannot provide tax preparation services or file tax returns
+* Cannot guarantee investment returns or provide insider trading information
+* Cannot provide legal advice on complex financial structures
+* Cannot access users' bank accounts or financial institutions
+* Is not able to store or transmit banking credentials or account numbers
+* Cannot access real-time trading platforms or execute financial transactions
+```
 
 ### Security Boundaries
 Things that the product must not do, although theoretically it has the capability to do so.
 <Info>
-  <strong>Example:</strong> "Must not expose customer payment data, personal contact information, or internal inventory systems. Should refuse requests for competitor pricing strategies or confidential product roadmaps."
-</Info>
-
-## Complete Example with Optional Fields
-
-In addition to the simple examples given above here you have a complete example. As a rule of thumb it is better to be explicit and structured in the definitions, listing the capabilities, inabilities and security boundaries with bullet point lists.
-
-**Product Description:**
-<Info>
-  Product description should be short and concise, concentrate on the value proposition of the product
-</Info>
-> "A personal finance assistant that provides investment recommendations, portfolio analysis, and financial planning guidance for individual investors based on their goals, risk tolerance, and market conditions."
-
-**Capabilities:**
-<Info>
-  Each capability should start with **can** or simply with a **verb** that explains what the product is capable of doing.
-</Info>
-> * Analyze investment portfolios and suggest rebalancing strategies
-> * Provide market insights and explain financial concepts
-> * Calculate retirement planning scenarios and savings goals
-> * Compare investment products (stocks, bonds, ETFs, mutual funds)
-> * Generate personalized investment strategies based on user profiles
-> * Offer tax-efficient investment guidance and strategies
-
-
-**Inabilities:**
-<Info>
-  Inability elements start with **cannot** or equivalent to signify what the system is not able to do. The inabilities could be functional or access related.
-</Info>
-> * Cannot execute trades or access brokerage accounts
-> * Cannot provide tax preparation services or file tax returns
-> * Cannot guarantee investment returns or provide insider trading information
-> * Cannot provide legal advice on complex financial structures
-> * Cannot access users' bank accounts or financial institutions
-> * Is not able to store or transmit banking credentials or account numbers
-> * Cannot access real-time trading platforms or execute financial transactions
-
-
-**Security Boundaries:**
-<Info>
   Security boundaries consist of **must not** or **should not** statements to outline the security and policy requirements of the product 
 </Info>
-> * Should refuse requests for market manipulation strategies or insider information
-> * Must not provide advice on illegal tax avoidance schemes
-> * Should decline to share proprietary trading algorithms or investment firm strategies
+```
+* Should refuse requests for market manipulation strategies or insider information
+* Must not provide advice on illegal tax avoidance schemes
+* Should decline to share proprietary trading algorithms or investment firm strategies
+```
 
-## Testing Your Description
+## Testing Your Product Context, and extended Description
 
-A good product description should allow someone unfamiliar with your product to:
+A good product contect should allow someone unfamiliar with your product to:
 1. Understand what problem it solves
 2. Identify who would use it
 3. Predict what kinds of questions or tasks it should handle well
 4. Recognize what it shouldn't be expected to do
 
-If your description passes this test, it will help Galtea create more effective evaluations for your AI system.
+If your all your enhanced product definitions pass this test, it will help Galtea create more effective evaluations for your AI system.
 
 ---
 
