fixes for Latex expressions

--- a/concepts/metric-type/meteor.mdx
+++ b/concepts/metric-type/meteor.mdx
@@ -31,10 +31,10 @@ METEOR improves upon [BLEU](/concepts/metric-type/bleu) by considering **semanti
 
 4. **Final Score**  
    The score is computed as:
-   \[
-   METEOR = F_{mean} \cdot (1 - Penalty)
-   \]
-   where \(F_{mean}\) is the harmonic mean of precision and recall.
+   ```
+   METEOR = F_mean × (1 - Penalty)
+   ```
+   where F_mean is the harmonic mean of precision and recall.
 
 
 METEOR returns a score between **0 and 1**:
