--- a/concepts/metric-type/rouge.mdx
+++ b/concepts/metric-type/rouge.mdx
@@ -26,10 +26,10 @@ This implementation uses **ROUGE-L**, which focuses on the **Longest Common Subs
 
 3. **F1 Score**  
    Combines precision and recall:  
-   \[
-   F1 = \frac{(1 + \beta^2) \cdot P \cdot R}{R + \beta^2 \cdot P}
-   \]
-   with \(\beta = 1\) for equal weighting.
+   ```
+   F1 = (1 + β²) × P × R / (R + β² × P)
+   ```
+   with β = 1 for equal weighting.
 
 
 ROUGE-L returns a score between **0 and 1**:
