--- a/concepts/metric-type/meteor.mdx
+++ b/concepts/metric-type/meteor.mdx
@@ -31,9 +31,9 @@ METEOR improves upon [BLEU](/concepts/metric-type/bleu) by considering **semanti
 
 4. **Final Score**  
    The score is computed as:
-   ```
-   METEOR = F_mean × (1 - Penalty)
-   ```
+   $$
+   METEOR = F_{mean} \times (1 - Penalty)
+   $$
    where F_mean is the harmonic mean of precision and recall.
 
 
