--- a/concepts/metric-type/meteor.mdx
+++ b/concepts/metric-type/meteor.mdx
@@ -2,7 +2,7 @@
 title: "METEOR"
 description: "Evaluates translation, summarization, and paraphrasing by aligning words using exact matches, stems, or synonyms, computing precision and recall."
 ---
-The **METEOR** (Metric for Evaluation of Translation with Explicit ORdering) metric is one of the [Classic Metric Type](/concepts/metric-type) Galtea exposes for evaluating machine translation, summarization, and paraphrasing tasks. It aims to correlate more closely with human judgments compared to [BLEU](/concepts/metric-type/bleu).
+The METEOR (Metric for Evaluation of Translation with Explicit ORdering) metric is one of the [Classic Metric Type](/concepts/metric-type) Galtea exposes for evaluating machine translation, summarization, and paraphrasing tasks. It aims to correlate more closely with human judgments compared to [BLEU](/concepts/metric-type/bleu).
 
 ---
 ## Evaluation Parameters
