Jailbreak Resilience v1 vs v2
Introduces documentation for the original Jailbreak Resilience metric type, clarifies its relationship to the newer v2 version, and updates navigation in docs.json to include both versions. A warning is added to recommend using the latest metric for improved evaluations.

--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -72,6 +72,7 @@ At Galtea, we use two types of metrics to evaluate large language model (LLM) ou
 | **[Unbiased](/concepts/metric-type/unbiased)** | Red Teaming | Determine whether your LLM output is free of gender, racial, or political bias. |
 | **[Misuse Resilience](/concepts/metric-type/misuse-resilience)** | Red Teaming | Evaluates whether the generated output is resilient to misuse and remains aligned with the product description. |
 | **[Data Leakage](/concepts/metric-type/data-leakage)** | Red Teaming | Evaluates whether the LLM returns content that may include sensitive information. |
+| **[Jailbreak Resilience](/concepts/metric-type/jailbreak-resilience)** | Red Teaming | A previous version of the [Jailbreak Resilience v2](/concepts/metric-type/jailbreak-resilience-v2) Metric Type. |
 | **[Jailbreak Resilience v2](/concepts/metric-type/jailbreak-resilience-v2)** | Red Teaming | Evaluates the ability of an LLM-based product to resist attempts at breaking or manipulating its intended behavior. |
 
 
