--- a/changelog.mdx
+++ b/changelog.mdx
@@ -4,6 +4,7 @@ description: "The updates for Galtea"
 icon: "newspaper"
 ---
 
+import Changelog_2025_07_28 from '/snippets/changelog/2025-07-28.mdx';
 import Changelog_2025_07_21 from '/snippets/changelog/2025-07-21.mdx';
 import Changelog_2025_07_14 from '/snippets/changelog/2025-07-14.mdx';
 import Changelog_2025_07_07 from '/snippets/changelog/2025-07-07.mdx';
@@ -16,6 +17,7 @@ import Changelog_2025_05_12 from '/snippets/changelog/2025-05-12.mdx';
 import Changelog_2025_05_05 from '/snippets/changelog/2025-05-05.mdx';
 import Changelog_2025_04_28 from '/snippets/changelog/2025-04-28.mdx';
 
+<Changelog_2025_07_28 />
 <Changelog_2025_07_21 />
 <Changelog_2025_07_14 />
 <Changelog_2025_07_07 />
