--- a/sdk/usage.mdx
+++ b/sdk/usage.mdx
@@ -71,7 +71,7 @@ metric_type_from_api = galtea.metrics.create(
     name="accuracy_v1",
     evaluator_model_name="GPT-4.1",
     criteria="Determine whether the 'actual output' is equivalent to the 'expected output'."
-    evaluation_params=["input", "expected output", "actual output"],
+    evaluation_params=["input", "expected_output", "actual_output"],
 )
 
 # Or define a custom metric locally for deterministic checks
