--- a/changelog.mdx
+++ b/changelog.mdx
@@ -1,22 +1,24 @@
 ---
-title: 'Changelog'
+title: "Changelog"
 description: "The updates for Galtea"
 icon: "newspaper"
 ---
 
-import Changelog_2025_07_28 from '/snippets/changelog/2025-07-28.mdx';
-import Changelog_2025_07_21 from '/snippets/changelog/2025-07-21.mdx';
-import Changelog_2025_07_14 from '/snippets/changelog/2025-07-14.mdx';
-import Changelog_2025_07_07 from '/snippets/changelog/2025-07-07.mdx';
-import Changelog_2025_06_30 from '/snippets/changelog/2025-06-30.mdx';
-import Changelog_2025_06_23 from '/snippets/changelog/2025-06-23.mdx';
-import Changelog_2025_06_16 from '/snippets/changelog/2025-06-16.mdx';
-import Changelog_2025_05_26 from '/snippets/changelog/2025-05-26.mdx';
-import Changelog_2025_05_19 from '/snippets/changelog/2025-05-19.mdx';
-import Changelog_2025_05_12 from '/snippets/changelog/2025-05-12.mdx';
-import Changelog_2025_05_05 from '/snippets/changelog/2025-05-05.mdx';
-import Changelog_2025_04_28 from '/snippets/changelog/2025-04-28.mdx';
+import Changelog_2025_07_28 from "/snippets/changelog/2025-07-28.mdx";
+import Changelog_2025_07_21 from "/snippets/changelog/2025-07-21.mdx";
+import Changelog_2025_07_14 from "/snippets/changelog/2025-07-14.mdx";
+import Changelog_2025_07_07 from "/snippets/changelog/2025-07-07.mdx";
+import Changelog_2025_06_30 from "/snippets/changelog/2025-06-30.mdx";
+import Changelog_2025_06_23 from "/snippets/changelog/2025-06-23.mdx";
+import Changelog_2025_06_16 from "/snippets/changelog/2025-06-16.mdx";
+import Changelog_2025_05_26 from "/snippets/changelog/2025-05-26.mdx";
+import Changelog_2025_05_19 from "/snippets/changelog/2025-05-19.mdx";
+import Changelog_2025_05_12 from "/snippets/changelog/2025-05-12.mdx";
+import Changelog_2025_05_05 from "/snippets/changelog/2025-05-05.mdx";
+import Changelog_2025_04_28 from "/snippets/changelog/2025-04-28.mdx";
+import Changelog_2025_08_04 from "/snippets/changelog/2025-08-04.mdx";
 
+<Changelog_2025_08_04 />
 <Changelog_2025_07_28 />
 <Changelog_2025_07_21 />
 <Changelog_2025_07_14 />
