--- a/snippets/changelog/2025-08-04.mdx
+++ b/snippets/changelog/2025-08-04.mdx
@@ -1,11 +1,11 @@
-<Update label="2025-08-04" description="Customizable Metrics and New Classical Metrics">
+<Update label="2025-08-04" description="Customizable Metrics and New Deterministic Metrics">
 ## Customizable Metrics via Custom Prompts
 
 We've expanded our metric library to include fully customizable metrics via custom prompts. This feature allows you to create metrics tailored to your specific needs, giving you more control over how your LLM is evaluated.
 
-## New Classical Metrics
+## New Deterministic Metrics
 
-We've added four new classical metrics to our library:
+We've added four new essential deterministic metrics to our library:
 
 - **Text Similarity**: Measures the similarity between two pieces of text, such as sentences or paragraphs.
 - **Text Match**: Checks if two pieces of text are identical or very similar.
