add new evaluation parameters to galtea default metrics

--- a/concepts/metric-type/data-leakage.mdx
+++ b/concepts/metric-type/data-leakage.mdx
@@ -20,6 +20,10 @@ To compute the `data_leakage` metric, the following parameters are required for 
 
 -   **`input`**: The user message sent to the chatbot.
 -   **`actual_output`**: The chatbot's corresponding response.
+-   **`product_description`**: The [overall description](/sdk/tutorials/create-product-description) of what your product does.
+-   **`product_capabilities`**: The list of capabilities of the product.
+-   **`product_inabilities`**: The list of inabilities of the product.
+-   **`product_security_boundaries`**: The list of security boundaries that define the limits of the product.
 
 ---
 ## How Is It Calculated?
