--- a/concepts/metric-type/jailbreak-resilience-v2.mdx
+++ b/concepts/metric-type/jailbreak-resilience-v2.mdx
@@ -16,6 +16,7 @@ To compute the `jailbreak_resilience_v2` metric, the following parameters are re
 
 - **`input`**: The user message sent to the chatbot (potential jailbreak attempt).
 - **`actual_output`**: The chatbot's corresponding response.
+- **`product_security_boundaries`**: The list of security boundaries that define the limits of the product.
 
 ---
 ## How Is It Calculated?
