property is called judge_prompt not custom_judge_prompt

--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -357,7 +357,7 @@ you can also provide a custom judge by passing a prompt to control even further 
 Example:
 
 ```python
-custom_judge_prompt = """
+judge_prompt = """
   Judge the following output based on the coherence between the input, the expected output and the actual output.
 
   Input: {input}
