--- a/changelog.mdx
+++ b/changelog.mdx
@@ -17,7 +17,9 @@ import Changelog_2025_05_12 from "/snippets/changelog/2025-05-12.mdx";
 import Changelog_2025_05_05 from "/snippets/changelog/2025-05-05.mdx";
 import Changelog_2025_04_28 from "/snippets/changelog/2025-04-28.mdx";
 import Changelog_2025_08_04 from "/snippets/changelog/2025-08-04.mdx";
+import Changelog_2025_08_11 from "/snippets/changelog/2025-08-11.mdx";
 
+<Changelog_2025_08_11 />
 <Changelog_2025_08_04 />
 <Changelog_2025_07_28 />
 <Changelog_2025_07_21 />
