--- a/snippets/changelog/2025-08-11.mdx
+++ b/snippets/changelog/2025-08-11.mdx
@@ -1,4 +1,4 @@
-<Update label="2025-08-11" description="Allow to select a galtea judge as base for one of your judges">
+<Update label="2025-08-11" description="Dashboard Enhancements: TestCase Management, Judge Templates, and System Resilience">
 ## TestCase Scenarios Creation and Edition via Dashboard
 
 You can now create and edit **TestCase Scenarios** directly through the Dashboard interface. This streamlined workflow allows you to define complex multi-turn conversation scenarios without leaving the platform, making it easier to set up comprehensive testing workflows for your conversational AI systems.
