correct resilience to noise

--- a/concepts/metric-type/resilience-to-noise.mdx
+++ b/concepts/metric-type/resilience-to-noise.mdx
@@ -20,9 +20,7 @@ This metric is essential for assessing how well your product performs in real-wo
 To compute the `resilience_to_noise` metric, the following parameters are required in every turn of the conversation:
 
 - **`input`**: The user message in the conversation, which is assumed to contain some form of noise or irrelevant information.
-- **`actual_output`**: The chatbot's corresponding response.
-git pull
-This metric specifically evaluates the model's ability to handle noisy input, so it is not meaningful to apply it to clean or noise-free data.
+- **`actual_output`**: The chatbot's corresponding response. This metric specifically evaluates the model's ability to handle noisy input, so it is not meaningful to apply it to clean or noise-free data.
 
 ---
 
