--- a/sdk/api/evaluation-task/create-single-turn.mdx
+++ b/sdk/api/evaluation-task/create-single-turn.mdx
@@ -40,7 +40,7 @@ evaluation_tasks = galtea.evaluation_tasks.create_single_turn(
     test_case_id="YOUR_TEST_CASE_ID",
     actual_output="The capital of France is Paris.",
     metrics=[
-        "coherence",            # Standard metric
+        "Coherence",            # Standard metric
         custom_score_accuracy   # Your custom metric object
     ]
 )
@@ -53,7 +53,7 @@ evaluation_tasks = galtea.evaluation_tasks.create_single_turn(
     is_production=True,
     input="A real user's query from production",
     actual_output="The model's live response.",
-    metrics=["relevance", "non-toxic"],
+    metrics=["Relevance", "Non-Toxic"],
     retrieval_context="Context retrieved by RAG for this query."
 )
 ```
